--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,21 +18,21 @@ html {
 }
 
 .header {
-  background-color: #52595D;
+  background-color: #52595d;
   color: #ffffff;
   padding: 20px;
 }
 
-.navbar ul{
+.navbar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
-.navbar li{
+.navbar li {
   display: inline;
 }
 
-.navbar li a{
+.navbar li a {
   color: white;
   text-decoration: none;
   padding: 12px 14px;
@@ -45,7 +45,7 @@ html {
 
 .sidebar {
   height: 640px;
-  background-color: #261C2C;
+  background-color: #261c2c;
 }
 
 .sidebar ul {
@@ -56,20 +56,20 @@ html {
   height: 200px;
 }
 
-.sidebar li a{
+.sidebar li a {
   display: block;
   padding: 8px 16px;
   text-decoration: none;
   margin-bottom: 7px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .sidebar li.active {
   background-color: #eee;
 }
 
-.sidebar li a:hover{
- background-color: #eee;
+.sidebar li a:hover {
+  background-color: #eee;
 }
 
 /* For mobile phones: */
@@ -79,35 +79,84 @@ html {
 
 @media only screen and (min-width: 600px) {
   /* For tablets: */
-  .col-s-1 {width: 8.33%;}
-  .col-s-2 {width: 16.66%;}
-  .col-s-3 {width: 25%;}
-  .col-s-4 {width: 33.33%;}
-  .col-s-5 {width: 41.66%;}
-  .col-s-6 {width: 50%;}
-  .col-s-7 {width: 58.33%;}
-  .col-s-8 {width: 66.66%;}
-  .col-s-9 {width: 75%;}
-  .col-s-10 {width: 83.33%;}
-  .col-s-11 {width: 91.66%;}
-  .col-s-12 {width: 100%;}
+  .col-s-1 {
+    width: 8.33%;
+  }
+  .col-s-2 {
+    width: 16.66%;
+  }
+  .col-s-3 {
+    width: 25%;
+  }
+  .col-s-4 {
+    width: 33.33%;
+  }
+  .col-s-5 {
+    width: 41.66%;
+  }
+  .col-s-6 {
+    width: 50%;
+  }
+  .col-s-7 {
+    width: 58.33%;
+  }
+  .col-s-8 {
+    width: 66.66%;
+  }
+  .col-s-9 {
+    width: 75%;
+  }
+  .col-s-10 {
+    width: 83.33%;
+  }
+  .col-s-11 {
+    width: 91.66%;
+  }
+  .col-s-12 {
+    width: 100%;
+  }
 }
 @media only screen and (min-width: 768px) {
   /* For desktop: */
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
+  .col-1 {
+    width: 8.33%;
+  }
+  .col-2 {
+    width: 16.66%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
+    width: 100%;
+  }
 }
-.message{
+.message {
   border: 1px solid red;
   float: right;
 }
+
